@@ -7,6 +7,8 @@ Bundle : AppImage is now compiled under Mageia 7.1 instead 6.1 for a better bina
 Bundle : AppImage use last Qt 5.15.2 and KF5 5.84 libraries.
 Plugins: New tool to share items on the network with a Motion JPEG stream server.
 General: Update internal Libraw to snapshot 20210827.
+General: Integration of Image Quality Sorter Google Summer of Code project 2021
+         from Phuoc Khanh LE <https://community.kde.org/GSoC/2021/StatusReports/PhuocKhanhLE>
 
 *****************************************************************************************************
 BUGFIXES:
